testdata/baselines/reference/submodule/compiler/awaitLiteralValues.errors.txt
awaitLiteralValues.ts(2,5): error TS1308: 'await' expressions are only allowed within async functions and at the top levels of modules.
awaitLiteralValues.ts(6,5): error TS1308: 'await' expressions are only allowed within async functions and at the top levels of modules.
awaitLiteralValues.ts(10,5): error TS1308: 'await' expressions are only allowed within async functions and at the top levels of modules.
awaitLiteralValues.ts(14,5): error TS1308: 'await' expressions are only allowed within async functions and at the top levels of modules.
awaitLiteralValues.ts(18,5): error TS1308: 'await' expressions are only allowed within async functions and at the top levels of modules.
awaitLiteralValues.ts(22,5): error TS1308: 'await' expressions are only allowed within async functions and at the top levels of modules.


==== awaitLiteralValues.ts (6 errors) ====
    function awaitString() {
        await 'literal';
        ~~~~~
!!! error TS1308: 'await' expressions are only allowed within async functions and at the top levels of modules.
    }
    
    function awaitNumber() {
        await 1;
        ~~~~~
!!! error TS1308: 'await' expressions are only allowed within async functions and at the top levels of modules.
    }
    
    function awaitTrue() {
        await true;
        ~~~~~
!!! error TS1308: 'await' expressions are only allowed within async functions and at the top levels of modules.
    }
    
    function awaitFalse() {
        await false;
        ~~~~~
!!! error TS1308: 'await' expressions are only allowed within async functions and at the top levels of modules.
    }
    
    function awaitNull() {
        await null;
        ~~~~~
!!! error TS1308: 'await' expressions are only allowed within async functions and at the top levels of modules.
    }
    
    function awaitUndefined() {
        await undefined;
        ~~~~~
!!! error TS1308: 'await' expressions are only allowed within async functions and at the top levels of modules.
    }
    